k8s/00-namespace.yaml
# k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bookstore
  labels:
    name: bookstore
